deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapi-deployment
spec:
  replicas: 1  # Number of pods to run
  selector:
    matchLabels:
      app: webapplication1
  template:
    metadata:
      labels:
        app: webapplication1
    spec:
      containers:
      - name: webapplication1
        image: webapplicationtest.azurecr.io/webapp:latest
        ports:
        - containerPort: 80
