nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydotnet-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mydotnet-app
  template:
    metadata:
      labels:
        app: mydotnet-app
    spec:
      containers:
        - name: mydotnet-app
          image: kubernetesappdevelopment.azurecr.io/mydotnet-app:latest
          ports:
            - containerPort: 80
