ngnix-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mydotnet-app
spec:
  type: LoadBalancer
  selector:
    app: mydotnet-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
