service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapi-deployment
spec:
  selector:
    app: webapplication1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  type: ClusterIP  # Keeps it internal to the cluster
