ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / # Optional: Rewrite URL path if necessary
spec:
  ingressClassName: nginx  # This specifies that the Ingress will use the NGINX Ingress controller
  rules:
  - host: my-app.example.com  # The domain name you'll use to access your app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapi-deployment
            port:
              number: 80  # Port on which your app service is running
